--- a/SCTrans/SCTrans.vcxproj.filters
+++ b/SCTrans/SCTrans.vcxproj.filters
@@ -126,4 +126,15 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrow.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Resources\back.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Resources\forward.png">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
